vlib/v/checker/tests/embed_unknown_compress_type.out
vlib/v/checker/tests/embed_unknown_compress_type.vv:3:10: error: not supported compression type: .this_is_not_a_valid_compression_type. supported: .none, .zlib
    1 | 
    2 | fn main() {
    3 |     test := $embed_file('embed_unknown_compress_type.vv', .this_is_not_a_valid_compression_type)
      |             ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    4 |     println(test.to_string())
    5 | }
